--- a/proxycurl-dashboard-work-logs.html
+++ b/proxycurl-dashboard-work-logs.html
@@ -93,16 +93,6 @@
           </div>
         </div> <!-- / .row -->
 
-        <!-- Tabs -->
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link text-muted" href="proxycurl-dashboard.html">API Key and Billing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Work Email Lookup Logs</a>
-          </li>
-        </ul>
-
       </div> <!-- / .container -->
     </header>
 
@@ -123,32 +113,50 @@
 
                   <!-- Heading -->
                   <h6 class="font-weight-bold text-uppercase mb-3">
-                    Account
+                    Proxycurl API
                   </h6>
 
                   <!-- List -->
-                  <ul class="card-list list text-gray-700">
+                  <ul class="card-list list text-gray-700 mb-6">
                     <li class="list-item">
                       <a class="list-link text-reset" href="proxycurl-dashboard.html">
-                        Api Key and Billing
+                        API Key and Billing
+                      </a>
+                    </li>
+                    <li class="list-item active">
+                      <a class="list-link text-reset" href="proxycurl-dashboard-work-logs.html">
+                        Work Email Lookup Logs
                       </a>
                     </li>
                     <li class="list-item">
-                      <a class="list-link text-reset" href="proxycurl-dashboard-pricing-quota.html">
-                        Pricing and Quota
-                      </a>
-                    </li>
-                    <li class="list-item">
-                      <a class="list-link text-reset" href="#">
-                        Documentation
-                      </a>
-                    </li>
-                    <li class="list-item">
-                      <a class="list-link text-reset" href="proxycurl-dashboard-invoices.html">
-                        Invoices
+                      <a class="list-link text-reset" href="#!">
+                        Docs
                       </a>
                     </li>
                   </ul>
+
+                  <!-- Heading -->
+                  <h6 class="font-weight-bold text-uppercase mb-3">
+                    Dwarf API
+                  </h6>
+
+                  <!-- List -->
+                  <ul class="card-list list text-gray-700 mb-6">
+                    <li class="list-item">
+                      <a class="list-link text-reset" href="#!">
+                        API Key and Billing
+                      </a>
+                    </li>
+                    <li class="list-item">
+                      <a class="list-link text-reset" href="#!">
+                        Docs
+                      </a>
+                    </li>
+                  </ul>
+
+                  <a class="font-size-sm text-danger font-weight-bold" href="#!">
+                    Log out
+                  </a>
 
                 </div>
               </div>
@@ -165,13 +173,13 @@
               <div class="card-body">
 
                 <!-- Spreadsheet -->
-                <div class="table-responsive mb-2">
-                  <table class="table table-bordered table-sm table-hover">
+                <div class="table-responsive mb-4">
+                  <table class="table table-bordered table-sm table-hover font-size-sm">
                     <thead>
                       <tr>
                         <th scope="col">Date/Time requested</th>
                         <th scope="col">LinkedIn Profile URL</th>
-                        <th scope="col">Status - <span class="badge badge-primary-soft">email_found</span> / <span class="badge badge-danger-soft">email_not_found</span></th>
+                        <th scope="col">Status
                         <th scope="col">Email address</th>
                       </tr>
                     </thead>
