--- a/proxycurl-dashboard.html
+++ b/proxycurl-dashboard.html
@@ -93,16 +93,6 @@
           </div>
         </div> <!-- / .row -->
 
-        <!-- Tabs -->
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="proxycurl-dashboard.html">API Key and Billing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-muted" href="proxycurl-dashboard-work-logs.html">Work Email Lookup Logs</a>
-          </li>
-        </ul>
-
       </div> <!-- / .container -->
     </header>
 
@@ -123,29 +113,43 @@
 
                   <!-- Heading -->
                   <h6 class="font-weight-bold text-uppercase mb-3">
-                    Account
+                    Proxycurl API
                   </h6>
 
                   <!-- List -->
-                  <ul class="card-list list text-gray-700">
+                  <ul class="card-list list text-gray-700 mb-6">
                     <li class="list-item active">
                       <a class="list-link text-reset" href="proxycurl-dashboard.html">
-                        Api Key and Billing
+                        API Key and Billing
                       </a>
                     </li>
                     <li class="list-item">
-                      <a class="list-link text-reset" href="proxycurl-dashboard-pricing-quota.html">
-                        Pricing and Quota
+                      <a class="list-link text-reset" href="proxycurl-dashboard-work-logs.html">
+                        Work Email Lookup Logs
                       </a>
                     </li>
                     <li class="list-item">
-                      <a class="list-link text-reset" href="#">
-                        Documentation
+                      <a class="list-link text-reset" href="#!">
+                        Docs
+                      </a>
+                    </li>
+                  </ul>
+
+                  <!-- Heading -->
+                  <h6 class="font-weight-bold text-uppercase mb-3">
+                    Dwarf API
+                  </h6>
+
+                  <!-- List -->
+                  <ul class="card-list list text-gray-700 mb-0">
+                    <li class="list-item">
+                      <a class="list-link text-reset" href="#!">
+                        API Key and Billing
                       </a>
                     </li>
                     <li class="list-item">
-                      <a class="list-link text-reset" href="proxycurl-dashboard-invoices.html">
-                        Invoices
+                      <a class="list-link text-reset" href="#!">
+                        Docs
                       </a>
                     </li>
                   </ul>
