--- a/agenbagi.html
+++ b/agenbagi.html
@@ -92,7 +92,7 @@
           <div class="col-12 col-md-6 col-lg-5" data-aos="fade-right">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold mb-4">
+            <h1 class="font-weight-bold display-4 mb-4">
               Tambahkan temanmu di aplikasi BagiKuota, dapatkan tambahan <span class="text-primary">500.000 IDR setiap bulan</span>
             </h1>
 
@@ -100,13 +100,16 @@
               Be an agent of Bagikuota app and make amazing side income
             </p>
 
-            <!-- Button -->
             <a href="#!" class="btn btn-primary lift mb-4 mr-md-2">
               Sign up as Agent
             </a>
 
             <a href="#!" class="btn btn-primary-soft lift mb-4">
               Join Telegram Group
+            </a>
+
+            <a href="#!" class="btn btn-outline-primary btn-block lift mb-4">
+              Download user guide
             </a>
 
           </div>
