--- a/agenbagi.html
+++ b/agenbagi.html
@@ -85,8 +85,9 @@
     <section class="pt-6 pt-md-10 py-14 bg-light">
       <div class="container">
         <div class="row align-items-center justify-content-center justify-content-md-between">
-          <div class="col-10 col-sm-8 col-md-6 order-md-2"> 
-            <img class="img img-fluid rounded" alt="..." src="Illustration_landscape_placement.png">
+
+          <div class="col-10 col-sm-8 col-md-6 order-md-2 mb-6"> 
+            <img class="img img-fluid rounded" alt="agenbagi invite illustrations" src="assets/img/illustrations/agenbagi invite illustration.png">
           </div>
 
           <div class="col-12 col-md-6 col-lg-5" data-aos="fade-right">
@@ -97,22 +98,23 @@
             </h1>
 
             <p class="text-muted lead">
-              Be an agent of Bagikuota app and make amazing side income
+              Jadilah Agen dari aplikasi BagiKuota dan dapatkan penghasilan tambahan yang luar biasa
             </p>
 
-            <a href="#!" class="btn btn-primary lift mb-4 mr-md-2">
-              Sign up as Agent
+            <a href="#!" class="btn btn-primary btn-block lift mb-4">
+              Daftar jadi Agen
             </a>
 
-            <a href="#!" class="btn btn-primary-soft lift mb-4">
-              Join Telegram Group
+            <a href="#!" class="btn btn-outline-primary lift mr-md-2 mb-4">
+              Gabung grup Telegram
             </a>
 
-            <a href="#!" class="btn btn-outline-primary btn-block lift mb-4">
-              Download user guide
+            <a href="#!" class="btn btn-outline-primary lift mb-4">
+              Download guide
             </a>
 
           </div>
+
         </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
@@ -276,7 +278,7 @@
             </p>
 
           </div>
-          <div class="col-6 col-md-4 col-lg-6 text-right">
+          <div class="col-6 col-md-4 col-lg-6 text-md-right">
 
             <!-- List -->
             <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
@@ -291,8 +293,8 @@
                 </a>
               </li>
               <li class="mb-3">
-                <a href="bagikuota-reward.html" class="text-reset">
-                  Rewards
+                <a href="#!" class="text-reset">
+                  Download APK
                 </a>
               </li>
               <li class="mb-3">
