--- a/agenbagi.html
+++ b/agenbagi.html
@@ -34,9 +34,14 @@
       <div class="container">
 
         <!-- Brand -->
-        <a class="navbar-brand" href="agenbagi.html">
+        <a class="navbar-brand" href="index.html">
           <img src="./assets/img/AgenBagi_Logo horizontal.png" class="navbar-brand-img" alt="proxycurl logo">
         </a>
+
+        <!-- Toggler -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
         <!-- Collapse -->
         <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -62,14 +67,14 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" href="#!">
-                Download APK
+              <a class="nav-link" id="navbarAccount" target="blank" href="https://www.instagram.com/bagikuota.id">
+                Instagram <i class="neu-arrow"></i>
               </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" id="navbarAccount" target="blank" href="https://www.instagram.com/agenbagi.id/">
-                Instagram <i class="neu-arrow"></i>
+              <a class="btn btn-sm btn-primary lift" id="navbarAccount" href="#!">
+                Download APK
               </a>
             </li>
 
@@ -82,7 +87,7 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-6 pt-md-10 py-14 bg-light">
+    <section class="pt-6 pt-md-10 py-14 bg-light border-bottom">
       <div class="container">
         <div class="row align-items-center justify-content-center justify-content-md-between">
 
@@ -105,12 +110,12 @@
               Daftar jadi Agen
             </a>
 
-            <a href="#!" class="btn btn-outline-primary lift mr-md-2 mb-4">
+            <a href="#!" class="btn btn-outline-primary lift btn-block mb-4">
               Gabung grup Telegram
             </a>
 
-            <a href="#!" class="btn btn-outline-primary lift mb-4">
-              Download guide
+            <a href="#!" class="btn btn-outline-primary btn-block lift mb-4">
+              Panduan aplikasi
             </a>
 
           </div>
@@ -126,12 +131,10 @@
         <div class="row align-items-center justify-content-center">
 
           <div class="col-12 text-center">
-            <h2 class="font-weight-bold">
-              Hadiah
+            <h2 class="font-weight-bold mb-8">
+              Keuntungan menjadi Agen
             </h2>
-            <p class="font-size-lg text-gray-700 mb-8">
-              Manfaat menjadi Agen
-            </p>
+
             <img class="img img-fluid rounded" alt="..." src="assets/img/illustrations/Agenbagi-timeline.png">
           </div>
 
