--- a/agenbagi.html
+++ b/agenbagi.html
@@ -98,8 +98,8 @@
           <div class="col-12 col-md-6 col-lg-5" data-aos="fade-right">
 
             <!-- Heading -->
-            <h1 class="font-weight-bold display-4 mb-4">
-              Tambahkan temanmu di aplikasi BagiKuota, dapatkan tambahan <span class="text-primary">500.000 IDR setiap bulan</span>
+            <h1 class="font-weight-bold mb-4">
+              Tambahkan temanmu di aplikasi BagiKuota, dapatkan penghasilan tambahan <span class="text-primary">Rp 500.000 setiap bulan</span>
             </h1>
 
             <p class="text-muted lead">
