--- a/reveal-api.html
+++ b/reveal-api.html
@@ -215,13 +215,13 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-4 pt-md-11">
+    <section class="pt-4 pt-md-6">
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row align-items-center justify-content-center">
           <div class="col-12 col-md-5 col-lg-6 order-md-2">
 
             <!-- Image -->
-            <img src="Illustration_landscape_placement.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/illustrations/reveal_first_fold_illustration-01.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
           <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
@@ -272,7 +272,7 @@
 
             <div class="card shadow-light-lg mb-6 lift lift-lg">
 
-              <img class="card-img-top" alt="..." src="Illustration_landscape_placement.png">
+              <img class="card-img-top" alt="live chat illustration" src="assets/img/illustrations/live-chat illustration.png">
 
               <div class="card-body">
                 <h3>
@@ -292,7 +292,7 @@
 
             <div class="card shadow-light-lg mb-6 lift lift-lg">
 
-              <img class="card-img-top" alt="..." src="Illustration_landscape_placement.png">
+              <img class="card-img-top" alt="sales alert illustration" src="assets/img/illustrations/sales alert illustration.png">
 
               <div class="card-body">
                 <h3>
@@ -312,7 +312,7 @@
 
             <div class="card shadow-light-lg mb-6 lift lift-lg">
 
-              <img class="card-img-top" alt="..." src="Illustration_landscape_placement.png">
+              <img class="card-img-top" alt="web content illustration" src="assets/img/illustrations/web-content illustration.png">
 
               <div class="card-body">
                 <h3>
