--- a/reveal-api.html
+++ b/reveal-api.html
@@ -218,17 +218,17 @@
     <section class="pt-4 pt-md-6">
       <div class="container">
         <div class="row align-items-center justify-content-center">
-          <div class="col-12 col-md-5 col-lg-6 order-md-2">
+          <div class="col-12 col-md-6 col-lg-5 order-md-2">
 
             <!-- Image -->
             <img src="assets/img/illustrations/reveal_first_fold_illustration-01.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
-          <div class="col-12 col-md-7 col-lg-6 order-md-1" data-aos="fade-up">
+          <div class="col-12 col-md-6 col-lg-7 order-md-1" data-aos="fade-up">
 
             <!-- Heading -->
             <h1 class="display-3 text-center text-md-left">
-              Reveal API takes an IP address and <span class="text-primary">reveals the associated company</span>
+              <span class="text-primary">Reveal the associated company</span> from an IP address with Reveal API
             </h1>
 
             <!-- Text -->
@@ -245,6 +245,107 @@
                 Try Reveal API for free
               </a>
             </div>
+
+          </div>
+        </div> <!-- / .row -->
+      </div> <!-- / .container -->
+    </section>
+
+    <!-- REVEAL-API JSON
+    ================================================== -->
+    <section class="pt-8 pt-md-11">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-md-10 col-lg-7 text-center" data-aos="fade-up">
+
+            <!-- Linkedin Link -->
+            <fieldset disabled>
+
+              <span class="btn btn-outline-primary shadow-lg mb-4" style="cursor: auto;">
+                <i class="neu-br-linkedin-sq text-primary"></i>
+                202.157.123.52
+              </span>
+
+            </fieldset>
+
+            <!-- Arrow -->
+            <i class="fe fe-arrow-down text-primary" style="font-size: 32px;"></i>
+            
+
+            <div class="mt-4 mb-6 text-left">
+            
+              <div class="highlight-block">
+
+              <!-- Controls -->
+              <div class="d-flex">
+                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+              </div>
+
+              <pre style="height: 320px;"><code class="language-python">
+
+('{
+    "public_identifier": "williamhgates",
+    "profile_pic_url": '
+    '"https://media-exp1.licdn.com/dms/image/C5603AQHv9IK9Ts0dFA/profile-displayphoto-shrink_800_800/0?e=1601510400&v=beta&t=jBkdpk23kJ5r9zxjndQ2LngYx13-iWZNyRai7MU1kmw", '
+    '"first_name": "Bill",
+    "last_name": "Gates",
+    "occupation": "Co-chair, Bill & '
+    'Melinda Gates Foundation", "headline": "Co-chair, Bill & Melinda Gates '
+    'Foundation", "summary": "Co-chair of the Bill & Melinda Gates Foundation. '
+    'Microsoft Co-founder. Voracious reader. Avid traveler. Active blogger.", '
+    '"country": "us",
+    "birth_date": {
+        "month": 10,
+        "day": 28
+    },
+    "address": null, '
+    '"wechat_contact_info": null,
+    "primary_twitter_handle": null, '
+    '"twitter_handles": [],
+    "phone_numbers": [],
+    "email_address": null, '
+    '"websites": [],
+    "experiences": [
+        {
+            "company": "Bill & Melinda Gates '
+    'Foundation", "title": "Co-chair", "starts_at": {"month": null, "year": '
+    '2000
+        },
+        "ends_at": null
+    },
+    {
+        "company": "Microsoft",
+        "title": "Co-founder", '
+    '"starts_at": {
+            "month": null,
+            "year": 1975
+        },
+        "ends_at": null
+    }
+],
+"education": '
+    '[
+    {
+        "school": null,
+        "degree_name": null,
+        "field_of_study": null
+    },
+    {
+        "school": '
+    '"Harvard University",
+        "degree_name": null,
+        "field_of_study": null
+    }
+], '
+    '"languages": [],
+"organisations": []
+}')
+              </code></pre>
+              </div>
+
+          </div>
 
           </div>
         </div> <!-- / .row -->
@@ -383,16 +484,21 @@
             <div class="card shadow-lg mb-6 mb-md-0">
               <div class="card-body">
 
+                <!-- Preheading -->
+                <div class="text-center mb-2">
+                  <span class="badge badge-pill badge-primary-soft">
+                    <span class="h6">$0.01 / credit</span>
+                  </span>
+                </div>
+
                 <!-- Price -->
                 <div class="d-flex justify-content-center">
-                  <span class="h2 mb-0 mt-2">$</span>
-                  <span class="price display-2 mb-0">0.01</span>
-                  <span class="h2 align-self-end mb-1">/ credit</span>
+                  <span class="price display-2 mb-0">2 credits</span>
                 </div>
 
                 <!-- Text -->
                 <p class="text-center text-muted mb-5">
-                  2 credits / call
+                  / successful API call
                 </p>
 
                 <!-- Button -->
