--- a/reveal-api.html
+++ b/reveal-api.html
@@ -215,13 +215,13 @@
 
     <!-- WELCOME
     ================================================== -->
-    <section class="pt-4 pt-md-6">
+    <section class="pt-4 pt-md-10">
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-12 col-md-6 col-lg-5 order-md-2">
 
             <!-- Image -->
-            <img src="assets/img/illustrations/reveal_first_fold_illustration-01.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
+            <img src="assets/img/illustrations/Reveal API illustration.png" class="img-fluid mw-md-150 mw-lg-130 mb-6 mb-md-0" alt="..." data-aos="fade-up" data-aos-delay="100">
 
           </div>
           <div class="col-12 col-md-6 col-lg-7 order-md-1" data-aos="fade-up">
@@ -251,25 +251,9 @@
       </div> <!-- / .container -->
     </section>
 
-    <!-- REVEAL-API JSON
-    ================================================== -->
-    <section class="pt-8 pt-md-11 pb-8 pb-md-12">
-      <div class="container">
-
-        <div class="row justify-content-center align-items-center">
-
-          <div class="col-12">
-            <img class="img img-fluid" alt="reveal api illustration" src="assets/img/illustrations/Reveal API illustration.png">
-          </div>
-
-        </div> <!-- / .row -->
-
-      </div> <!-- / .container -->
-    </section>
-
     <!-- FEATURES
     ================================================== -->
-    <section class="py-8 py-md-11 bg-gradient-light-white border-bottom">
+    <section class="py-8 py-md-12 bg-gradient-light-white border-bottom">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-md-10 col-lg-8 text-center">
