--- a/disposable-email.html
+++ b/disposable-email.html
@@ -402,7 +402,28 @@
               Check if an email is a <span class="text-danger">disposable email</span>
             </h4>
 
-            <div class="highlight-block mb-10">
+            <div class="highlight-block">
+
+              <!-- Controls -->
+              <div class="d-flex">
+                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+              </div>               
+
+              <pre>
+                <code class="language-python">
+<span class="text-muted">$</span> curl...</code></pre>
+            </div>
+
+            <!--arrow-->
+            <div class="text-center mt-n2">
+              <span class="badge badge-lg badge-rounded-circle bg-danger text-white">
+                <i class="fe fe-arrow-down"></i>
+              </span>
+            </div>
+
+            <div class="highlight-block mt-n2 mb-10">
 
               <!-- Controls -->
               <div class="d-flex">
@@ -427,7 +448,28 @@
               Check if an email is a <span class="text-danger">free email</span>
             </h4>
 
-            <div class="highlight-block mb-10">
+            <div class="highlight-block">
+
+              <!-- Controls -->
+              <div class="d-flex">
+                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+              </div>               
+
+              <pre>
+                <code class="language-python">
+<span class="text-muted">$</span> curl...</code></pre>
+            </div>
+
+            <!--arrow-->
+            <div class="text-center mt-n2">
+              <span class="badge badge-lg badge-rounded-circle bg-danger text-white">
+                <i class="fe fe-arrow-down"></i>
+              </span>
+            </div>
+
+            <div class="highlight-block mt-n2 mb-10">
 
               <!-- Controls -->
               <div class="d-flex">
@@ -452,6 +494,27 @@
             </h4>
 
             <div class="highlight-block">
+
+              <!-- Controls -->
+              <div class="d-flex">
+                <span class="bg-danger rounded-circle" style="width: 10px; height: 10px;"></span>
+                <span class="bg-warning rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+                <span class="bg-success rounded-circle ml-1" style="width: 10px; height: 10px;"></span>
+              </div>               
+
+              <pre>
+                <code class="language-python">
+<span class="text-muted">$</span> curl...</code></pre>
+            </div>
+
+            <!--arrow-->
+            <div class="text-center mt-n2">
+              <span class="badge badge-lg badge-rounded-circle bg-success text-white">
+                <i class="fe fe-arrow-down"></i>
+              </span>
+            </div>
+
+            <div class="highlight-block mt-n2">
 
               <!-- Controls -->
               <div class="d-flex">
